--- a/src/main/resources/templates/Navbar.html
+++ b/src/main/resources/templates/Navbar.html
@@ -19,6 +19,12 @@
                         <i class="bi bi-image-fill"></i> Portfolio
                     </a>
                 </li>
+				<li class="nav-item">
+				    <a class="nav-link" href="/booking">
+				        <i class="bi bi-calendar-check me-1"></i> Book Session
+				    </a>
+				</li>
+		
                 <li class="nav-item">
                     <a class="nav-link" href="/about">
                         <i class="bi bi-person-fill"></i> About
