Added services and testimonials section

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -29,9 +29,11 @@
                 <p>RC Photography is a passionate team of photographers based in Hanamkonda, Telangana. Led by Ravi Chandra, we specialize in capturing beautiful moments through our lenses. Whether it's a wedding, a corporate event, or nature photography, we strive to deliver the best photos that tell your story.</p>
                 <h5><i class="bi bi-person-circle"></i> Ravi Chandra - Founder</h5>
             </div>
-            <div class="col-md-6" data-aos="fade-left">
-                <img src="images/aboutus-image.png" class="img-fluid rounded shadow" alt="About RC Photography">
-            </div>
+			<div class="col-md-6 text-center" data-aos="fade-left">
+			    <img src="images/founder-ravi.jpg" class="img-fluid rounded-circle shadow-lg mb-3" alt="Ravi Chandra - Founder" style="max-width: 300px;">
+			    <h5 class="mt-3">Ravi Chandra</h5>
+			    <p class="text-muted">Founder, RC Photography</p>
+			</div>
         </div>
     </section>
 
