--- a/src/main/resources/templates/admin/viewBookings.html
+++ b/src/main/resources/templates/admin/viewBookings.html
@@ -80,7 +80,9 @@
         </div>
     </div>
 </div>
-
+<footer class="bg-dark text-white text-center p-4 mt-5">
+    <p class="mb-0">&copy; 2025 RC Photography. All rights reserved. <i class="bi bi-camera-fill"></i></p>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
