--- a/src/main/resources/templates/admin/AdminNavbar.html
+++ b/src/main/resources/templates/admin/AdminNavbar.html
@@ -17,7 +17,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm" data-aos="fade-down">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="/admin/dashboard">
-			<img src="/images/logo.png" alt="RC Photography Logo" style="height: 50px; width: auto;">&nbsp; RC Admin
+			<img src="/images/logo.png" alt="RC Photography Logo" style="height: 50px; width: 50px; border-radius: 50%; object-fit: cover;">
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar"
 			aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
